--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.17",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.485.0",
     "motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
